@@ -1,6 +1,12 @@
 0.6.1 (1/??/2009):
 ------------------
 
+- Fixed bug that returned incorrect disk size on 32-bit versions of
+  FreeBSD.
+
+- Fixed bug that prevented FreeBSD version from working on disk image
+  files.
+
 - Fixed bug that caused BSD disklabel conversion to not work.
 
 0.6.0 (1/15/2009):
